RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/03_0007/03_merged.txt
/home/dimpling/AutoSpec/out/03_0007/03_merged.c:27:5: error: unterminated comment
   27 |     /*@;
      |     ^
